@@ -25,4 +25,9 @@ UserTag
 
 * srcliteral attribute added to [button] tag. Setting srcliteral avoids the image existence check for the src attribute. 
 
+OrderCheck
+----------
+
+* relocate isbn order check to code/OrderCheck.
+
 (end)
